--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Official Blog of IEEE-VIT"
 meta_description: "Jekyll template, Medium styled, free for bloggers."
 logo: 'assets/images/ieeevit-blue-1-5017x1103.png'
 favicon: 'assets/images/logo.png'
-baseurl: /mediumish-theme-jekyll
+baseurl: /ieeevitblog
 google_analytics: 'UA-46278016-1'
 #disqus: 'demowebsite'
 #mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
